# cracking-the-coding-interview

./: .gitignore  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: tests.yaml
chapter_one/: question_eight.py  question_four.py  question_two.py
chapter_two/: linked_list_functions.py  question_1.py  question_4.py  question_5.py  question_5_follow_up.py  question_6.py  question_8.py  reverse_linked_list.py  test_question_1.py  test_question_2.py  test_question_3.py  test_question_4.py  test_question_5.py  test_question_5_follow_up.py  test_question_6.py  test_question_7.py  test_question_8.py
ctci/: __init__.py
ctci/chapter_one/: question_nine.py  question_one.py  question_six.py  question_three.py
ctci/chapter_two/: __init__.py  question_2.py  question_3.py  question_4.py  question_5.py  question_6.py  question_7.py  question_8.py  test_question_5_follow_up.py  test_question_6.py  test_question_8.py
linked_list_python/: linked_list.py
src/ctci/chapter_one/: question_five.py  question_seven.py
src/ctci/chapter_three/: __init__.py  question_five.py  question_four.py  question_six.py  question_three.py  question_two.py  test_question_five.py  test_question_four.py  test_question_six.py  test_question_three.py  test_question_two.py
src/ctci/chapter_two/: question_1.py  question_5_follow_up.py  test_question_1.py  test_question_2.py  test_question_3.py  test_question_4.py  test_question_5.py  test_question_7.py
src/ctci/linked_list/: __init__.py  queue.py  stack.py  test_queue.py  test_stack.py
