[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctci"
version = "1.0"
authors = [
  { name="Joseph Briggs", email="jhbriggs23@gmail.com" },
]
description = "This package is for digitising crosswords"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
	
]

